@@ -524,8 +524,8 @@ CONFIG_NX_PACKEDMSFIRST=n
 CONFIG_NX_MOUSE=y
 CONFIG_NX_KBD=y
 #CONFIG_NXTK_BORDERWIDTH=4
-#CONFIG_NXTK_BORDERCOLOR1
-#CONFIG_NXTK_BORDERCOLOR2
+CONFIG_NXTK_BORDERCOLOR1=0x00a9a9a9
+CONFIG_NXTK_BORDERCOLOR2=0x00696969
 CONFIG_NXTK_AUTORAISE=n
 CONFIG_NXFONT_SANS22X29=n
 CONFIG_NXFONT_SANS23X27=y
